[package]
name = "philiprehberger-config-loader"
version = "0.1.2"
edition = "2021"
authors = ["Philip Rehberger"]
description = "Layered configuration from files and environment variables"
license = "MIT"
repository = "https://github.com/philiprehberger/rs-config-loader"
keywords = ["config", "configuration", "settings", "environment", "toml"]
categories = ["config"]
