[package]
name = "philiprehberger-config-loader"
version = "0.1.7"
edition = "2021"
authors = ["Philip Rehberger"]
description = "Layered configuration from files and environment variables"
license = "MIT"
repository = "https://github.com/philiprehberger/rs-config-loader"
readme = "README.md"
rust-version = "1.70"
documentation = "https://docs.rs/philiprehberger-config-loader"
keywords = ["config", "configuration", "settings", "environment", "toml"]
categories = ["config"]
